namespaces/llm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama-tls-route
  namespace: llm
spec:
  parentRefs:
    - name: jarrett-net
      namespace: gateway
  hostnames:
    - llama.j5t.io
  rules:
    - backendRefs:
        - name: llama-server
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-llm
  namespace: llm
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway
  to:
    - group: ""
      kind: Service
